Fixes bug where No Search Results error message remains on screen after a successful search. Added aria-labels to the Search field and Search button for accessibility. Moved search-container down so that it is aligned with the Header

--- a/css/styles.css
+++ b/css/styles.css
@@ -30,9 +30,10 @@ header {
 }
 
 header h1 {
-    font-size: 2.25em;
+    font-size: 2.5em;
     color: rgb(255,255,255);
     margin-top: 35px;
+    font-family: 'Staatliches', cursive;
 }
 
 .search-input {
@@ -257,11 +258,10 @@ header h1 {
 
     .header-text-container {
         text-align: left;
-        font-family: 'Staatliches', cursive;
     }
 
     .search-container {
-        margin-top: 25px;
+        margin-top: 40px;
     }
 
     .modal {
